ignoring cache data

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
 .DS_Store
 /production/.sass-cache/c0a357c3ac525065de26fddac851f6df3a0908b5/main.scssc
 api/index.php
+
+.InterarchyMirrorCacheData/Current Cache.1
